[package]
name = "debcrafter"
version = "0.2.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
toml = "0.5.4"
void = "1"
itertools = "0.9"
thiserror = "1.0.22"
either = "1.6.1"
indexmap = { version = "1.6.2", features = ["serde"] }
fmt2io = "0.2.0"
rfc822-like = "0.2.0"

[dev-dependencies]
lazy_static = "1.4.0"
